# pygodata

./: README.md  requirements.txt  setup.cfg  setup.py
src/pygodata/: api.py  util.py
