[metadata]
name = pygodata
version = 0.0.1
author = Semion Sidorenko
author_email = semion.sidorenko@gmail.com
description = A Python/Pandas interface for GoData
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ssidorenko/pygodata
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Healthcare Industry


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
